tests/ui/asm/naked-invalid-attr.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `a`
  --> $DIR/naked-invalid-attr.rs:57:5
   |
LL | #[::a]
   |     ^ use of unresolved module or unlinked crate `a`

error: attribute should be applied to a function definition
  --> $DIR/naked-invalid-attr.rs:14:1
   |
LL |   #[unsafe(naked)]
   |   ^^^^^^^^^^^^^^^^
LL |   #[repr(C)]
LL | / struct S {
LL | |     #[unsafe(naked)]
LL | |     a: u32,
LL | |     b: u32,
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/naked-invalid-attr.rs:17:5
   |
LL |     #[unsafe(naked)]
   |     ^^^^^^^^^^^^^^^^
LL |     a: u32,
   |     ------ not a function definition

error: attribute should be applied to a function definition
  --> $DIR/naked-invalid-attr.rs:52:5
   |
LL |     #[unsafe(naked)]
   |     ^^^^^^^^^^^^^^^^
LL |     || {};
   |     ----- not a function definition

error[E0736]: attribute incompatible with `#[unsafe(naked)]`
  --> $DIR/naked-invalid-attr.rs:57:1
   |
LL | #[::a]
   | ^^^^^^ the `{{root}}::a` attribute is incompatible with `#[unsafe(naked)]`
...
LL | #[unsafe(naked)]
   | ---------------- function marked with `#[unsafe(naked)]` here

error: attribute should be applied to a function definition
  --> $DIR/naked-invalid-attr.rs:23:5
   |
LL |     #[unsafe(naked)]
   |     ^^^^^^^^^^^^^^^^
LL |     extern "C" fn invoke(&self);
   |     ---------------------------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/naked-invalid-attr.rs:10:5
   |
LL |     #[unsafe(naked)]
   |     ^^^^^^^^^^^^^^^^
LL |     fn f();
   |     ------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/naked-invalid-attr.rs:5:1
   |
LL | #![unsafe(naked)]
   | ^^^^^^^^^^^^^^^^^ cannot be applied to crates

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0433, E0736.
For more information about an error, try `rustc --explain E0433`.
